--- a/9.html
+++ b/9.html
@@ -3,117 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
 </head>
-<link rel="stylesheet" href="9.css">
 <body>
-    <h2 class="title">Padmakanya multipal campus,bagbazar ktm<br>Bachelor in Computer Applications (BCA)<br>Daily Class Routine - 2081</h2>
-    <p><strong>Year/Semester:</strong> III<span class="tab"></span>
-    <strong>Section:</strong> B <span class="tab"></span>
-    <strong>Effective from:</strong> 2081/10/15</p>
-    <table>
-        <tr>
-            <th>Day/Time</th>
-            <th>10:30am - 11:30am</th>
-            <th>11:30am - 12:30pm</th>
-            <th>12:30   - 10:30PM</th>
-            <th>1:30    - 2pm</th>
-            <th>2pm     - 3pm</th>      
-            <th>3pm     - 4pm</th>
-        </tr>
-        <tr>
-            <td>Sunday</td>
-            <td>OOP in Java [SP]</td>
-            <td>System Analaysis and Design [SC]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Probability and Statistics[JP]</td>
-        </tr>
-        <tr <td>Monday</td>
-            <td>OOP in Java [SP]</td>
-            <td>System Analaysis and Design [SC]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Probability and Statistics[JP]</td>
-        </tr>
-        <tr>
-            <td>Tuesday</td>
-            <td>OOP in Java [SP]</td>
-            <td>System Analaysis and Design [SC]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Probability and Statistics[JP]</td>
-        </tr>
-        <tr>
-            <td>Wednesday</td>
-            <td>OOP in Java [SP]</td>
-            <td>System Analaysis and Design [SC]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Probability and Statistics[JP]</td>
-        </tr>
-        <tr>
-            <td>Thursday</td>
-            <td>OOP in Java [SP]</td>
-            <td>Extra tranning class[TBA]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Probability and Statistics[JP]</td>
-        </tr>
-        <tr>
-            <td>Friday</td>
-            <td>OOP in Java [SP]</td>
-            <td>Extra tranning class[TBA]</td>
-            <td>Data structure and Algorithms[SS]</td>
-            <td rowspan="6" class="break-time">Break Time</td>
-            <td>web Technology[BC]</td>
-            <td>Extra tranning class[TBA]</td>
-        </tr>
+     
     </table>
-
-<h3>Teacher's Detail</h3>
-    <table class="small">
-        <tr>
-            <th>SN</th>
-            <th>Code</th>
-            <th>Name</th>
-            <th>Contact Number</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>BC</td>
-            <td>Basanta Chapagain</td>
-            <td>9849030537</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>SC</td>
-            <td>Sarita chhetri</td>
-            <td>9849513044</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>JPK</td>
-            <td>Jay prakash kapari</td>
-            <td>9841023962</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>SP</td>
-            <td>Subash pariyar</td>
-            <td>9851141394</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>SS</td>
-            <td>Sonik shrestha</td>
-            <td>9860191073</td>
-        </tr>
+    <h1>Table for Class Routine</h1>
+    <table border="1"
+     width="100%"> 
+    <tr>
+        <th>Day/Time</th>
+        <th> 10:30-11:30</th>
+        <th> 11:30-12:30</th>
+        <th> 12:30-1:30</th>
+        <th> 1:30-2:00</th>
+        <th> 2:00-3:00</th>
+        <th> 3:00-4:00</th>
+</tr>
+<tr>
+    <th>Suday</th>
+    <th>DSA</th>
+    <th>OOP</th>
+    <th>SAD</th>
+    <td rowspan="6">Break</td>
+    <th>Stat</th>
+    <th>Web</th>
+    </tr>
+    <tr>
+        <th>Monday</th>
+        <th>DSA</th>
+        <th>OOP</th>
+        <th>SAD</th>
+        <th>Stat</th>
+        <th>Web</th>
+    </tr>
+    <tr>
+        <th>Tuesday</th>
+        <th>DSA</th>
+        <th>OOP</th>
+        <th>SAD</th>
+        <th>Stat</th>
+        <th>Web</th>
+    </tr>
+    <tr>
+        <th>Wednesday</th>
+        <th>DSA</th>
+        <th>OOP</th>
+        <th>SAD</th>
+        <th>Stat</th>
+        <th>Web</th>
+    </tr>
+    <tr>
+        <th>Thursday</th>
+        <th>DSA</th>
+        <th>OOP</th>
+        <th>SAD</th>
+        <th>Stat</th>
+        <th>Web</th>
+    </tr>
+    <tr>
+        <th>Friday</th>
+        <th>DSA</th>
+        <th>OOP</th>
+        <th>SAD</th>
+        <td colspan="2">Stat</td>
+    </tr>
     </table>
 </body>
 </html>
